# nbfmm

./: .gitignore  CMakeLists.txt  README.md  index.html
check/: CMakeLists.txt  test.cu
check/core/: solver.cu  solver.hpp
check/core/solver/: l2l.cu  l2p.cu  m2l.cu  m2m.cu  p2m.cu  p2p.cu  postdo.cu  predo.cu
demo/: CMakeLists.txt  demo.cpp  demo.cu  visualize.cu
doxygen/: CMakeLists.txt  Doxyfile.in
include/: CMakeLists.txt  nbfmm.hpp
include/nbfmm/: config.hpp.in  core.hpp  display.hpp  kernel_functions.hpp  model.hpp  solver.hpp  utility.hpp  visualization.hpp
include/nbfmm/core/: kernel_function.hpp  solver.hpp
include/nbfmm/display/: stars.hpp
include/nbfmm/model/: model.hpp
include/nbfmm/utility/: operator.hpp
include/nbfmm/visualization/: stars.hpp
include/visualization/: stars.hpp
main/: CMakeLists.txt  demo.cu  main.cu
main/script/: circle.py  disk.py  double_disk.py  doubledisk.py  rectangle.py
source/: CmakeLists.txt
source/nbfmm/: kernel_functions.cu  solver.cu
source/nbfmm/core/: solver.cu
source/nbfmm/core/solver/: l2l.cu  l2p.cu  m2l.cu  m2m.cu  p2m.cu  p2p.cu  postdo.cu  predo.cu  solve.cu
source/nbfmm/display/: stars.cu
source/nbfmm/display/stars/: display.cu  initialize.cu  prune.cu  update.cu
source/nbfmm/model/: circle.cu  circle.hpp  circle_center.cu  circle_random.cu  circle_uniform.cu  circle_uniform_center.cu  disk.cu  disk_center.cu  disk_static.cu  double_disk.cu  double_disk_center.cu  rectangle.cu
source/nbfmm/solver/: l2l.cu  l2p.cu  m2l.cu  m2m.cu  p2m.cu  p2p.cu  postdo.cu  predo.cu  solve.cu
source/nbfmm/visualization/: stars.cu
source/visualization/: stars.cu
